Removed -XX:MaxPermSize=2048M and -XX:+CMSClassUnloadingEnabled